<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.08"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="@drawable/bordered_bg"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/algoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/solid_bg"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <Button
                android:id="@+id/Button04"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical|center_horizontal|top"
                android:onClick="onBtnClick"
                android:text="@string/infoBtnLabel"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Button02"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center_horizontal|top"
                android:onClick="onBtnClick_scenes"
                android:text="@string/infoBtnLabel_scenes"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Button01"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center_horizontal|top"
                android:onClick="onBtnClick_indiancars"
                android:text="@string/infoBtnLabel_indiancars"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Button03"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center_horizontal|top"
                android:onClick="onBtnClick_landmarks"
                android:text="@string/infoBtnLabel_landmarks"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="208dp"
        android:layout_height="fill_parent"
        android:layout_weight="0.07" >

	    <TextView
	        android:id="@+id/fpsLabel"
	        android:layout_width="58dp"
	        android:layout_height="193dp"
	        android:layout_above="@+id/camera_preview"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_weight="0.70"
	        android:padding="5dp"
	        android:textSize="15dp" />

	    <FrameLayout
	        android:id="@+id/camera_preview"
	        android:layout_width="52dp"
	        android:layout_height="26dp"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignTop="@+id/processed_image_view"
	        android:background="@drawable/bordered_bg"
	        android:padding="2dp" >

	    </FrameLayout>

	    <FrameLayout
	        android:id="@+id/processed_image_view"
	        android:layout_width="52dp"
	        android:layout_height="26dp"
	        android:layout_alignParentBottom="true"
	        android:layout_toRightOf="@+id/camera_preview"
	        android:background="@drawable/bordered_bg"
	        android:padding="2dp" >
	    </FrameLayout>

	</RelativeLayout>
    
</LinearLayout>